--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "coinflip",
-  "version": "0.0.1",
-  "description": "\"Coin Flip\"",
+  "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Ahmed Ahmed",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "figlet": "^1.2.4"
